argo/argoui.yml
apiVersion: v1
kind: Service
metadata:
  annotations: 
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP1
  labels:
    app: argoui
  name: argoui
  namespace: exp-argocd
spec:
  ports:
  - name: "443"
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: exp-argocd-server
  sessionAffinity: None
  type: NodePort
